Fix various issues on mobile (responsive design)

--- a/styles/main/_basicModal.custom.scss
+++ b/styles/main/_basicModal.custom.scss
@@ -1,5 +1,6 @@
 div.basicModalContainer {
 	background-color: $colorDialogContainerBg;
+	z-index: 999;
 
 	&--error {
 		transform: translateY(40px);
